--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -3,84 +3,25 @@
 <html lang="en">
   <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Albert Garcia Portfolio</title>
 
-  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
-
-  <meta
-    content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    name="viewport"
-  />
-
-  <title>Albert Garcia</title>
-
-  <meta property="og:title" content="Homepage | Atom Template" />
-
-  <meta property="og:locale" content="en_US" />
-
-  <link
-    rel="canonical"
-    href="//"
-  />
-
-  <meta
-    property="og:url"
-    content="//"
-  />
-
-  <meta
-    name="description"
-    content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-  />
-
-  <link rel="icon" type="image/png" href="{% static '/assets/img/favicon.svg' %}" />
-
-  <meta name="theme-color" content="#5540af" />
-
-  <meta property="og:site_name" content="Atom Template" />
-
-  <meta property="og:image" content="//assets/img/social.jpg" />
-
-  <meta name="twitter:card" content="summary_large_image" />
-
-  <meta name="twitter:site" content="@tailwindmade" />
-
-  <link
-    crossorigin="crossorigin"
-    href="https://fonts.gstatic.com"
-    rel="preconnect"
-  />
-
-  <link
-    as="style"
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap"
-    rel="preload"
-  />
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-
-  <link
-    href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-    rel="stylesheet"
-  />
-
-  <link
-    crossorigin="anonymous"
-    href="{% static '/assets/styles/main.min.css' %}"
-    media="screen"
-    rel="stylesheet"
-  />
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.svg' %}" />
   
-  <script
-    defer
-    src="https://unpkg.com/@alpine-collective/toolkit@1.0.0/dist/cdn.min.js"
-  ></script>
-
+  <!-- Fuentes -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  
+  <!-- Boxicons -->
+  <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+  
+  <!-- TailwindCSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
+  
+  <!-- Estilos personalizados -->
+  <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
+  
+  <!-- Alpine.js -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-
-  
 </head>
 
 
