--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -17,8 +17,9 @@
   <!-- TailwindCSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
   
-  <!-- Estilos personalizados -->
+  <!-- Estilos personalizados 
   <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
+  -->
   
   <!-- Alpine.js -->
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
