--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -17,9 +17,8 @@
   <!-- TailwindCSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
   
-  <!-- Estilos personalizados 
+  <!-- Estilos personalizados -->
   <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
-  -->
   
 </head>
 
