--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -14,11 +14,14 @@
   <!-- Boxicons -->
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   
-  <!-- TailwindCSS -->
+  <!-- TailwindCSS 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
+  -->
   
   <!-- Estilos personalizados -->
   <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
+
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   
 </head>
 
