--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -14,9 +14,8 @@
   <!-- Boxicons -->
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   
-  <!-- TailwindCSS 
+  <!-- TailwindCSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@latest/dist/tailwind.min.css" rel="stylesheet">
-  -->
   
   <!-- Estilos personalizados -->
   <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
