--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -20,12 +20,11 @@
   <!-- Estilos personalizados -->
   <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
 
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <!-- GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
 
-  <script
-    defer
-    src="https://unpkg.com/@alpine-collective/toolkit@1.0.0/dist/cdn.min.js"
-  ></script>
+
   
 </head>
 
@@ -37,17 +36,7 @@
   >
     
     <div id="main" class="relative">
-      <div
-  x-data="{
-    triggerNavItem(id) {
-        $scroll(id)
-    },
-    triggerMobileNavItem(id) {
-        mobileMenu = false;
-        this.triggerNavItem(id)
-    }
-}"
->
+      <div>
   <div class="fixed w-full z-50 top-0 py-3 sm:py-5  absolute
   ">
   <div class="container flex items-center justify-center">
@@ -57,7 +46,7 @@
         <li class="group pl-6">
           
           <span
-            @click="triggerNavItem('#about')"
+            @click="$scroll('#about')"
             class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
             >About</span
           >
@@ -71,7 +60,7 @@
         <li class="group pl-6">
           
           <span
-            @click="triggerNavItem('#portfolio')"
+            @click="$scroll('#portfolio')"
             class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
             >Portfolio</span
           >
@@ -85,7 +74,7 @@
         <li class="group pl-6">
           
           <span
-            @click="triggerNavItem('#work')"
+            @click="$scroll('#work')"
             class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
             >Work</span
           >
@@ -142,7 +131,7 @@
       <li class="py-2">
         
         <span
-          @click="triggerMobileNavItem('#about')"
+          @click="$scroll('#about')"
           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
           >About</span
         >
@@ -153,7 +142,7 @@
       <li class="py-2">
         
         <span
-          @click="triggerMobileNavItem('#portfolio')"
+          @click="$scroll('#portfolio')"
           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
           >Portfolio</span
         >
@@ -164,7 +153,7 @@
       <li class="py-2">
         
         <span
-          @click="triggerMobileNavItem('#work')"
+          @click="$scroll('#work')"
           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
           >Work</span
         >
