--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -38,45 +38,29 @@
       <ul class="flex items-center">
         
         <li class="group pl-6">
-          
           <span
-            onclick="$scroll('#about')"
+            id="about-link"
             class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-            >About</span
-          >
-          
-          <span
-            class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
-          ></span>
+          >About</span>
+          <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
         </li>
-        
         
         <li class="group pl-6">
-          
           <span
-            onclick="$scroll('#portfolio')"
+            id="portfolio-link"
             class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-            >Portfolio</span
-          >
-          
-          <span
-            class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
-          ></span>
+          >Portfolio</span>
+          <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
         </li>
-        
         
         <li class="group pl-6">
-          
           <span
-            onclick="$scroll('#work')"
+            id="work-link"
             class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-            >Work</span
-          >
-          
-          <span
-            class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"
-          ></span>
+          >Work</span>
+          <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
         </li>
+        
         
       </ul>
     </div>
@@ -125,7 +109,7 @@
       <li class="py-2">
         
         <span
-          onclick="$scroll('#about')"
+          id="about-link"
           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
           >About</span
         >
@@ -136,7 +120,7 @@
       <li class="py-2">
         
         <span
-          onclick="$scroll('#portfolio')"
+          id="portfolio-link"
           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
           >Portfolio</span
         >
@@ -147,7 +131,7 @@
       <li class="py-2">
         
         <span
-          onclick="$scroll('#work')"
+          id="work-link"
           class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
           >Work</span
         >
