--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -19,131 +19,121 @@
   
   <!-- Estilos personalizados -->
   <link href="{% static 'assets/styles/main.min.css' %}" rel="stylesheet" />
-  
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
+
 </head>
 
 
-  <body
-    :class="{ 'overflow-hidden max-h-screen': mobileMenu }"
-    class="relative"
-    x-data="{ mobileMenu: false }"
-  >
-    
-    <div id="main" class="relative">
-      <div>
-  <div class="fixed w-full z-50 top-0 py-3 sm:py-5  absolute
-  ">
-  <div class="container flex items-center justify-center">
-    <div class="hidden lg:block">
-      <ul class="flex items-center">
-        
-        <li class="group pl-6">
-          <span
-            id="about-link"
-            class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-          >About</span>
-          <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
-        </li>
-        
-        <li class="group pl-6">
-          <span
-            id="portfolio-link"
-            class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-          >Portfolio</span>
-          <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
-        </li>
-        
-        <li class="group pl-6">
-          <span
-            id="work-link"
-            class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-          >Work</span>
-          <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
-        </li>
-        
-        
-      </ul>
-    </div>
-    <div class="block lg:hidden">
-      <button onclick="mobileMenu = true">
-        <i class="bx bx-menu text-4xl text-white"></i>
+<body class="relative">
+  <div id="main" class="relative">
+    <div>
+      <div class="fixed w-full z-50 top-0 py-3 sm:py-5 absolute">
+        <div class="container flex items-center justify-center">
+          <div class="hidden lg:block">
+            <ul class="flex items-center">
+              <li class="nav-item group pl-6">
+                <span
+                  data-target="#about"
+                  class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                >About</span>
+                <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
+              </li>
+              <li class="nav-item group pl-6">
+                <span
+                  data-target="#portfolio"
+                  class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                >Portfolio</span>
+                <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
+              </li>
+              <li class="nav-item group pl-6">
+                <span
+                  data-target="#work"
+                  class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                >Work</span>
+                <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
+              </li>
+            </ul>
+          </div>
+          <div class="block lg:hidden">
+            <button onclick="toggleMobileMenu()">
+              <i class="bx bx-menu text-4xl text-white"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <button
+        id="scrollTopBtn"
+        class="z-10 fixed bottom-6 right-6 hidden w-12 h-12 rounded-full bg-primary text-white shadow-lg hover:bg-blue-700 flex items-center justify-center"
+        onclick="scrollToTop()"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="h-6 w-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"
+          />
+        </svg>
       </button>
+
+      <!-- Menú móvil -->
+      <div
+        id="mobileMenu"
+        class="hidden pointer-events-none fixed inset-0 z-70 min-h-screen bg-black bg-opacity-70 opacity-0 transition-opacity lg:hidden"
+      >
+        <div class="absolute right-0 min-h-screen w-1/4 bg-primary py-4 px-8 shadow md:w-1/3">
+          <button
+            class="absolute top-0 right-0 mt-4 mr-4"
+            onclick="toggleMobileMenu()"
+          >
+            <img
+              src="{% static '/assets/img/icon-close.svg' %}"
+              class="h-10 w-auto"
+              alt="Close Menu"
+            />
+          </button>
+
+          <ul class="mt-8 flex flex-col">
+            <li class="nav-item py-2">
+              <span
+                data-target="#about"
+                class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                >About</span
+              >
+            </li>
+            <li class="nav-item py-2">
+              <span
+                data-target="#portfolio"
+                class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                >Portfolio</span
+              >
+            </li>
+            <li class="nav-item py-2">
+              <span
+                data-target="#work"
+                class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
+                >Work</span
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
-<button
-  id="scrollTopBtn"
-  class="z-10 fixed bottom-6 right-6 hidden w-12 h-12 rounded-full bg-primary text-white shadow-lg hover:bg-blue-700 flex items-center justify-center"
-  onclick="scrollToTop()"
->
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    fill="none"
-    viewBox="0 0 24 24"
-    stroke-width="1.5"
-    stroke="currentColor"
-    class="h-6 w-6"
-  >
-    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
-  </svg>
-</button>
 
 
-<div
-  class="pointer-events-none fixed inset-0 z-70 min-h-screen bg-black bg-opacity-70 opacity-0 transition-opacity lg:hidden"
-  :class="{ 'opacity-100 pointer-events-auto': mobileMenu }"
->
-  <div
-    class="absolute right-0 min-h-screen w-2/3 bg-primary py-4 px-8 shadow md:w-1/3"
-  >
-    <button
-      class="absolute top-0 right-0 mt-4 mr-4"
-      onclick="mobileMenu = false"
-    >
-      <img src="{% static '/assets/img/icon-close.svg' %}" class="h-10 w-auto" alt="" />
-    </button>
-
-    <ul class="mt-8 flex flex-col">
-      
-      <li class="py-2">
-        
-        <span
-          id="about-link"
-          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-          >About</span
-        >
-        
-      </li>
-      
-      
-      <li class="py-2">
-        
-        <span
-          id="portfolio-link"
-          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-          >Portfolio</span
-        >
-        
-      </li>
-      
-      
-      <li class="py-2">
-        
-        <span
-          id="work-link"
-          class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white"
-          >Work</span
-        >
-        
-      </li> 
-      
-    </ul>
-  </div>
-</div>
-
-
-      <div><div
+      <div id="section1" class="hero-background"><div
+  
   class="relative bg-cover bg-center bg-no-repeat py-8"
   style="background-image: url('{% static 'assets/img/bg-hero.jpg' %}')"
 >
@@ -155,16 +145,16 @@
     class="container relative z-30 pt-20 pb-12 sm:pt-56 sm:pb-48 lg:pt-64 lg:pb-48"
   >
     <div class="flex flex-col items-center justify-center lg:flex-row">
-      <div class="rounded-full border-8 border-primary shadow-xl">
+      <div id="section1" class="rounded-full border-8 border-primary shadow-xl">
         <img
           src="{% static '/assets/img/1718215102820.jpeg' %}"
-          class="h-48 rounded-full sm:h-56"
+          class="hero-img h-48 rounded-full sm:h-56"
           alt="author"
         />
       </div>
       <div class="pt-8 sm:pt-10 lg:pl-8 lg:pt-0">
         <h1
-          class="text-center font-header text-4xl text-white sm:text-left sm:text-5xl md:text-6xl"
+          class="hero-title text-center font-header text-4xl text-white sm:text-left sm:text-5xl md:text-6xl"
         >
           Hello I'm Albert Garcia!
         </h1>
@@ -203,16 +193,16 @@
   <div class="container flex flex-col items-center py-16 md:py-20 lg:flex-row">
     <div class="w-full text-center sm:w-3/4 lg:w-3/5 lg:text-left">
       <h2
-        class="font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"
+        class="about-title font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"
       >
         Who am I?
       </h2>
       <h4
-        class="pt-6 font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"
+        class="about-subtitle pt-6 font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"
       >
         I'm a Full Stack developer specialized in Django.
       </h4>
-      <p class="pt-6 font-body leading-relaxed text-grey-20">
+      <p class="about-text pt-6 font-body leading-relaxed text-grey-20">
         I'm a passionate Full Stack Developer with a strong focus on creating efficient, scalable, and user-friendly web applications. Specializing in Django, I thrive in building robust backend systems, integrating seamlessly with modern frontend technologies to deliver comprehensive digital solutions.
       </p>
       <div
@@ -250,7 +240,7 @@
           </h4>
           <h3 class="font-body text-3xl font-bold text-primary">80%</h3>
         </div>
-        <div class="mt-2 h-3 w-full rounded-full bg-lila">
+        <div class="skill-bar mt-2 h-3 w-full rounded-full bg-lila">
           <div class="h-3 rounded-full bg-primary" style="width: 80%"></div>
         </div>
       </div>
@@ -259,7 +249,7 @@
           <h4 class="font-body font-semibold uppercase text-black">Python</h4>
           <h3 class="font-body text-3xl font-bold text-primary">90%</h3>
         </div>
-        <div class="mt-2 h-3 w-full rounded-full bg-lila">
+        <div class="skill-bar mt-2 h-3 w-full rounded-full bg-lila">
           <div class="h-3 rounded-full bg-primary" style="width: 90%"></div>
         </div>
       </div>
@@ -270,7 +260,7 @@
           </h4>
           <h3 class="font-body text-3xl font-bold text-primary">85%</h3>
         </div>
-        <div class="mt-2 h-3 w-full rounded-full bg-lila">
+        <div class="skill-bar mt-2 h-3 w-full rounded-full bg-lila">
           <div class="h-3 rounded-full bg-primary" style="width: 85%"></div>
         </div>
       </div>
@@ -279,7 +269,7 @@
           <h4 class="font-body font-semibold uppercase text-black">Javascript</h4>
           <h3 class="font-body text-3xl font-bold text-primary">75%</h3>
         </div>
-        <div class="mt-2 h-3 w-full rounded-full bg-lila">
+        <div class="skill-bar mt-2 h-3 w-full rounded-full bg-lila">
           <div class="h-3 rounded-full bg-primary" style="width: 75%"></div>
         </div>
       </div>
@@ -290,18 +280,18 @@
 
 <div class="container py-16 md:py-20" id="portfolio">
   <h2
-    class="text-center font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"
+    class="portfolio-title text-center font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"
   >
     Check out my Portfolio
   </h2>
   <h3
-    class="pt-6 text-center font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"
+    class="portfolio-subtitle pt-6 pb-12 text-center font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"
   >
     Here's what I have done with the past
   </h3>
 
   <div
-    class="mx-auto grid w-full grid-cols-1 gap-8 pt-12 sm:w-3/4 md:gap-10 lg:w-full lg:grid-cols-3"
+    class="portfolio-items mx-auto grid w-full grid-cols-1 gap-8 sm:w-3/4 md:gap-10 lg:w-full lg:grid-cols-3"
   >
     <a
       href="https://calculadora-b7gd.onrender.com/"
@@ -310,7 +300,7 @@
       <img
         src="{% static '/assets/img/calculadora.jpeg' %}"
         class="w-full shadow"
-        alt="portfolio image"
+        alt="Image 1"
       />
     </a>
     <a
@@ -320,7 +310,7 @@
       <img
         src="{% static '/assets/img/todoapp.jpeg' %}"
         class="w-full shadow"
-        alt="portfolio image"
+        alt="Image 2"
       />
     </a>
     <a
@@ -330,7 +320,7 @@
       <img
         src="{% static '/assets/img/weather.jpeg' %}"
         class="w-full shadow"
-        alt="portfolio image"
+        alt="Image 3"
       />
     </a>
   </div>
@@ -419,12 +409,219 @@
 </div>
 
     </div>
-    <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
-
     
-    <script src="{% static '/assets/js/main.js' %}"></script>
+    <script>
+
+      // Registra GSAP
+      gsap.registerPlugin(ScrollTrigger);
+      gsap.registerPlugin(ScrollToPlugin)
+      // Espera a que todo esté listo
+      window.addEventListener("load", () => {
+        
+        gsap.from(".hero-title", {
+          opacity: 0,
+          y: 50,
+          duration: 1,
+          ease: "power2.out",
+          delay: 0.2,
+        });
+        
+        gsap.from(".hero-img", {
+          opacity: 0,
+          scale: 0.6,
+          duration: 1,
+          ease: "power2.out",
+        });
+        
+
+        gsap.from(".about-title", {
+          opacity: 0,
+          y: 30,
+          duration: 1,
+          scrollTrigger: {
+            trigger: "#about",
+            start: "top 80%",
+          },
+        });
+
+        gsap.from(".about-subtitle, .about-text", {
+          opacity: 0,
+          x: -30,
+          duration: 1,
+          stagger: 0.2,
+          scrollTrigger: {
+            trigger: "#about",
+            start: "top 80%",
+          },
+        });
+
+
+        gsap.from(".portfolio-title, .portfolio-subtitle", {
+          opacity: 0,
+          y: 20,
+          duration: 1,
+          scrollTrigger: {
+            trigger: "#portfolio",
+            start: "top 80%",
+          },
+        });
+
+        gsap.from(".portfolio-items img", {
+          opacity: 0,
+          y: 20,
+          duration: 1,
+          stagger: 0.2,
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: ".portfolio-items",
+            start: "top 80%",
+          },
+        });
+
+
+        gsap.from(".nav-item", {
+          opacity: 0,
+          y: -20,
+          duration: 1,
+          stagger: 0.2,
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: ".nav-item", // El selector que activa la animación
+            start: "top 80%", // Inicia cuando el 80% del viewport toca el elemento
+          },
+        });
+
+
+
+
+        gsap.to(".hero-background", {
+          y: 50, // Desplaza el fondo verticalmente
+          ease: "none",
+          scrollTrigger: {
+            trigger: ".hero-background",
+            start: "top top",
+            end: "bottom top",
+            scrub: true,
+          },
+        });
+
+
+
+        // Anima las barras de habilidades
+        gsap.from(".skill-bar div", {
+          scaleX: 0,
+          transformOrigin: "left center",
+          duration: 2,
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: ".skill-bar",
+            start: "top 80%",
+          },
+        });
+
+        // Animación para el título de la sección "Work"
+        gsap.from("#work h2", {
+          opacity: 0,
+          y: 30,
+          duration: 1,
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: "#work",
+            start: "top 80%", // Inicia cuando la parte superior de la sección está al 80% del viewport
+          },
+        });
+
+        // Animación para el subtítulo de la sección "Work"
+        gsap.from("#work h3", {
+          opacity: 0,
+          x: -30,
+          duration: 1,
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: "#work",
+            start: "top 80%",
+          },
+        });
+
+        // Animación para los elementos de la experiencia laboral
+        gsap.from("#work .relative > .flex", {
+          opacity: 0,
+          y: 50,
+          duration: 1,
+          stagger: 0.3, // Aplica un retraso escalonado entre los elementos
+          ease: "power2.out",
+          scrollTrigger: {
+            trigger: "#work",
+            start: "top 80%",
+          },
+        });
+
+      });
+
+      function toggleMobileMenu() {
+        const menu = document.getElementById("mobileMenu");
+  
+        // Alterna clases para mostrar u ocultar el menú
+        if (menu.classList.contains("hidden")) {
+          menu.classList.remove("hidden");
+          setTimeout(() => {
+            menu.classList.remove("opacity-0");
+            menu.classList.add("pointer-events-auto");
+          }, 10);
+        } else {
+          menu.classList.add("opacity-0");
+          menu.classList.remove("pointer-events-auto");
+          menu.addEventListener(
+            "transitionend",
+            () => {
+              menu.classList.add("hidden");
+            },
+            { once: true }
+          );
+        }
+      }
+      
+      document.addEventListener("DOMContentLoaded", () => {
+        const scrollTopBtn = document.getElementById("scrollTopBtn");
+        const navItems = document.querySelector("ul"); // Selecciona el contenedor de los li
+      
+        // Mostrar/ocultar el botón al hacer scroll
+        ScrollTrigger.create({
+          start: "top 200px", // Mostrar el botón después de 200px de scroll
+          onEnter: () => scrollTopBtn.classList.remove("hidden"),
+          onLeaveBack: () => scrollTopBtn.classList.add("hidden"),
+        });
+      
+        // Scroll al inicio de la página al hacer clic en el botón
+        scrollTopBtn.addEventListener("click", () => {
+          gsap.to(window, {
+            duration: 1, // Duración del desplazamiento
+            ease: "power2.out", // Suavizado
+            scrollTo: 0, // Lleva al inicio de la página
+          });
+        });
+      
+        // Animación para desplazarse a las secciones al hacer clic en los elementos `li`
+        document.querySelectorAll(".nav-item span").forEach((menuItem) => {
+          menuItem.addEventListener("click", (event) => {
+            const targetId = event.target.getAttribute("data-target"); // Obtiene el ID de la sección
+            const targetElement = document.querySelector(targetId); // Selecciona la sección correspondiente
+      
+            if (targetElement) {
+              gsap.to(window, {
+                duration: 1, // Duración del desplazamiento
+                ease: "power2.out", // Suavizado
+                scrollTo: targetElement, // Desplaza hacia la sección
+              });
+            }
+          });
+        });
+      });
+      
+      
+    </script>
+
+
 
     
   </body>
