--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -91,7 +91,7 @@
         id="mobileMenu"
         class="hidden pointer-events-none fixed inset-0 z-70 min-h-screen bg-black bg-opacity-70 opacity-0 transition-opacity lg:hidden"
       >
-        <div class="absolute right-0 min-h-screen w-1/3 bg-primary py-4 px-8 shadow md:w-2/3">
+        <div class="absolute right-0 min-h-screen w-2/3 bg-primary py-4 px-8 shadow md:w-1/3">
           <button
             class="absolute top-0 right-0 mt-4 mr-4"
             onclick="toggleMobileMenu()"
@@ -147,8 +147,8 @@
     <div class="flex flex-col items-center justify-center lg:flex-row">
       <div id="section1" class="rounded-full border-8 border-primary shadow-xl">
         <img
-          src="{% static '/assets/img/1718215102820.jpeg' %}"
-          class="hero-img h-48 rounded-full sm:h-56"
+          src="{% static '/assets/img/foto.jpeg' %}"
+          class="hero-img h-56 rounded-full sm:h-56"
           alt="author"
         />
       </div>
