--- a/portfolioapp/templates/portfolio/index.html
+++ b/portfolioapp/templates/portfolio/index.html
@@ -172,7 +172,7 @@
           <div
             class="flex items-center justify-center pt-5 pl-2 sm:justify-start sm:pt-0"
           >
-            <a href="https://www.linkedin.com/in/albert-garcia-512596310/" class="pl-4">
+            <a href="https://www.linkedin.com/in/albertgl99/" class="pl-4">
               <i
                 class="bx bxl-linkedin text-2xl text-white hover:text-yellow"
               ></i>
